Scrollbars that to appear when transition animation fixed

--- a/website-registration/src/style.css
+++ b/website-registration/src/style.css
@@ -1,18 +1,30 @@
 header {
 	position: absolute;
 	top: 0;
-	left: 15px;
-	right: 15px;
-	height: 40px;
+	left: 0;
+	right: 0;
 	padding: 0;
 	margin: 0;
 	width: 100%;
 }
 
+.nav {
+	padding: 0 15px;
+}
+
+.container {
+	position: absolute;
+	top: 55px;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	overflow: hidden;
+}
+
 .page {
 	position: absolute;
 	text-align: center;
-	top: 55px;
+	top: 0;
 	bottom: 0;
 	left: 0;
 	right: 0;
@@ -21,6 +33,8 @@ header {
 .page-enter {
 	opacity: 0;
 	transform: scale(1.1);
+	max-width: 100%;
+	max-height: 100%;
 }
 
 .page-enter-active {
